# rs_torrent

./: .gitignore  Cargo.toml  README.md  optimizations.md
docs/: BLOCK_BASED_DOWNLOAD.md  CONNECTION_TROUBLESHOOTING.md  REQUEST_PIPELINING.md  SHA1_VERIFICATION.md
examples/: download_client.rs  torrent_parser.rs  torrent_usage.rs
src/: lib.rs  torrent.rs  tracker.rs
src/bencode_parser/: errors.rs  parser.rs
src/peer/: client.rs  connection.rs  handshake.rs  message.rs  metadata.rs  mod.rs  pool.rs  state.rs  stats.rs
src/tracker/: handshake.rs  http.rs  message.rs  mod.rs  udp.rs
test_data/: debian-12.11.0-amd64-netinst.iso.torrent
