[package]
name = "rs_torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
nom = "8.0.0"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5.0"

[[example]]
name = "torrent_usage"
path = "examples/torrent_usage.rs"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"
