[package]
name = "rs_torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
nom = "8.0.0"
percent-encoding = "2.3.1"
sha1 = "0.10.6"
thiserror = "2.0.12"
url = "2.5.4"
reqwest = { version = "0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
assert_matches = "1.5.0"

[[bin]]
name = "rs_torrent_cli"
path = "src/bin/cli.rs"
doctest = false


[[example]]
name = "torrent_usage"
path = "examples/torrent_usage.rs"

[[example]]
name = "torrent_parser"
path = "examples/torrent_parser.rs"

[[example]]
name = "torrent_client"
path = "examples/download_client.rs"
